--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.erau.mad.trb.flightdatarecorder" >
 
+    <!--Permissions-->
+    <!--Location is used for what should be obvious reasons-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <!--Used for Google Maps API, nothing more.-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,11 +29,25 @@
         </activity>
         <activity
             android:name=".HistoryActivity"
-            android:label="@string/title_activity_history"
-            android:parentActivityName=".MainLoggingActivity" >
+            android:label="@string/title_activity_history" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.erau.mad.trb.flightdatarecorder.MainLoggingActivity" />
+        </activity>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".FlightDetailActivity"
+            android:label="@string/title_activity_flight_detail" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.erau.mad.trb.flightdatarecorder.HistoryActivity" />
         </activity>
     </application>
 
